--- a/.gitignore
+++ b/.gitignore
@@ -124,12 +124,21 @@ celerybeat.pid
 
 # Environments
 .env
+.env.production
 .venv
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
+
+# SSL certificates - NEVER commit these!
+ssl/
+*.pem
+*.key
+*.crt
+*.p12
+*.pfx
 
 # Spyder project settings
 .spyderproject
