--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -33,10 +33,8 @@ services:
     ports:
       - "80:80"
       - "443:443"
-    environment:
-      - DOMAIN_NAME=${DOMAIN_NAME}
-      - RATE_LIMIT_PER_SECOND=${RATE_LIMIT_PER_SECOND:-10}
-      - RATE_LIMIT_BURST=${RATE_LIMIT_BURST:-20}
+    env_file:
+      - .env.production
     volumes:
       - ./nginx.conf:/etc/nginx/templates/nginx.conf
       - ./ssl:/etc/nginx/ssl
