--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -36,7 +36,7 @@ services:
     env_file:
       - .env.production
     volumes:
-      - ./nginx.conf:/etc/nginx/templates/nginx.conf
+      - ./nginx.conf:/etc/nginx/nginx.conf
       - ./ssl:/etc/nginx/ssl
     depends_on:
       - stripe-backend
