Switching to default rate limit in nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -10,7 +10,7 @@ http {
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml;
 
     # Rate limiting
-    limit_req_zone $binary_remote_addr zone=api:10m rate=${RATE_LIMIT_PER_SECOND:-10}r/s;
+    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
 
     upstream stripe_backend {
         server stripe-backend:8247;
