--- a/nginx.conf
+++ b/nginx.conf
@@ -51,7 +51,7 @@ http {
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
         location / {
-            limit_req zone=api burst=${RATE_LIMIT_BURST:-20} nodelay;
+            limit_req zone=api burst=20 nodelay;
 
             proxy_pass http://stripe_backend;
             proxy_set_header Host $host;
