--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ on:
   pull_request:
     branches: [main]
     types: [closed]
+  workflow_dispatch: # add the ability to fire manually
 
 jobs:
   deploy:
