--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,11 +25,11 @@ jobs:
           su - ${{ secrets.DEPLOY_USER }} -c "
             cd ${{ secrets.PROJECT_PATH }} &&
             git pull origin main &&
-            docker-compose -f docker-compose.prod.yml down &&
+            docker compose -f docker-compose.prod.yml down &&
             docker image prune -f &&
-            docker-compose -f docker-compose.prod.yml up -d --build &&
+            docker compose -f docker-compose.prod.yml up -d --build &&
             docker system prune -f &&
-            docker-compose -f docker-compose.prod.yml ps
+            docker compose -f docker-compose.prod.yml ps
           "
 
     - name: Health check
