--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,25 @@
 # Stripe Configuration
 STRIPE_ENV=test
-STRIPE_TEST_SECRET_KEY=sk_test_key
-STRIPE_PK_TEST_KEY=pk_test_key
-STRIPE_SECRET_KEY=sk_live_your_live_key_here
-STRIPE_WEBHOOK_SECRET=whsec_key
+STRIPE_TEST_SECRET_KEY=sk_test_
+STRIPE_PK_TEST_KEY=pk_test_
+STRIPE_SECRET_KEY=sk_live_
+STRIPE_WEBHOOK_SECRET=whsec_
 
 # Application Security
-SECRET_KEY=your-very-secure-secret-key-change-this
-CORS_ORIGINS=http://localhost:3000,http://localhost:5000
+API_KEY= #python -c "import secrets; print('API_KEY=' + secrets.token_urlsafe(32))"
+CORS_ORIGINS=http://localhost:3000,http://localhost:5000,https://pos-terminal.example.co.uk
+
+# Application Configuration
+FLASK_ENV=production
+APP_PORT=8247
 
 # Rate Limiting (optional - Redis URL for production)
-# REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://redis:6379
+
+# Nginx
+DOMAIN_NAME=pos-terminal.example.co.uk
+RATE_LIMIT_PER_SECOND=10
+RATE_LIMIT_BURST=20
 
 # Logging
 LOG_LEVEL=INFO
